# AI-Lab

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  INSTALL.org  Makefile  README.org  USER_GUIDE.org  shell.nix
doc/: crates.js
doc/ai_lab/: all.html  fn.build_ui.html  index.html
docs/: help.html  search-index.js  settings.html  src-files.js
docs/ai_lab/: fn.main.html  fn.workspace_ui.html  sidebar-items.js
docs/doc/: search-index.js  src-files.js
docs/doc/ai_lab/: all.html  index.html  sidebar-items.js
docs/doc/ai_lab/workspace_ui/: fn.workspace_ui.html  index.html  sidebar-items.js
docs/doc/src/ai_lab/: main.rs.html  workspace_ui.rs.html
docs/src/ai_lab/: main.rs.html
src/: annotation.rs  helper.rs  main.rs  workspace.rs  workspace_ui.rs
