[package]
name = "ai-lab"
version = "0.1.0"
edition = "2021"
readme = "README.org"
authors = ["Felix Drees"]
description = "GUI for annotating, training, and evaluating AI models, simplifying workflows for data scientists."
repository = "https://github.com/felixbd/ai-lab"
license = "GPL-3.0 license"
# license-file = "LICENSE"
keywords = ["ai", "ml", "gtk"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unsafe_code = "forbid"

# [lints.clippy]
# enum_glob_use = "deny"

[dependencies]
# GUI
gtk = { version = "0.4.7", package = "gtk4" }
# glib = "0.10"
# cairo-rs = "0.14"
# gdk-pixbuf = "0.19"

# parsing and serialization toml config files
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
