[package]
name = "ai-lab"
version = "0.1.0"
edition = "2021"
readme = "README.org"
authors = ["Felix Drees"]
description = "GUI for annotating, training, and evaluating AI models, simplifying workflows for data scientists."
repository = "https://github.com/felixbd/ai-lab"
license = "GPL-3.0 license"
# license-file = "LICENSE"
keywords = ["ai", "ml", "gtk", "gui"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unsafe_code = "forbid"  # { level = "forbid", priority = 0 }

[lints.clippy]
# msrv = "1.30.0"
enum_glob_use = "deny"

[dependencies]  # see: https://crates.io/
gtk = { version = "0.8.2", package = "gtk4" }           # GUI - Rust GTK 4 bindings
glib = "0.19.8"                                         # GUI - Rust GLib and GObject bindings
toml = "0.8.14"                                         # parsing      .toml config files
serde = { version = "1.0.203", features = ["derive"] }  # erialization .toml config files
